--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,109 +1,149 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="./assets/css/index.css">
+	<script type="module" src="./assets/js/index.js" defer></script>
+	<script src="https://kit.fontawesome.com/df7a3d6763.js" crossorigin="anonymous"></script>
 </head>
-<body>
-<header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-	<nav>
-		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-		</ul>
-	</nav>
-</header>
-<main>
-	<section id="introduction">
-		<figure>
-			<img src="./assets/images/sophie-bluel.png" alt="">
-		</figure>
-		<article>
-			<h2>Designer d'espace</h2>
-			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
-			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
-			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
-		</article>
-	</section>
-	<section id="portfolio">
-		<h2>Mes Projets</h2>
-		<div class="gallery">
-			<figure>
-				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
-				<figcaption>Abajour Tahina</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/appartement-paris-v.png" alt="Appartement Paris V">
-				<figcaption>Appartement Paris V</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/restaurant-sushisen-londres.png" alt="Restaurant Sushisen - Londres">
-				<figcaption>Restaurant Sushisen - Londres</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/la-balisiere.png" alt="Villa “La Balisiere” - Port Louis">
-				<figcaption>Villa “La Balisiere” - Port Louis</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/structures-thermopolis.png" alt="Structures Thermopolis">
-				<figcaption>Structures Thermopolis</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/appartement-paris-x.png" alt="Appartement Paris X">
-				<figcaption>Appartement Paris X</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/le-coteau-cassis.png" alt="Pavillon “Le coteau” - Cassis">
-				<figcaption>Pavillon “Le coteau” - Cassis</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/villa-ferneze.png" alt="Villa Ferneze - Isola d’Elba">
-				<figcaption>Villa Ferneze - Isola d’Elba</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/appartement-paris-xviii.png" alt="Appartement Paris XVIII">
-				<figcaption>Appartement Paris XVIII</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/bar-lullaby-paris.png" alt="Bar “Lullaby” - Paris">
-				<figcaption>Bar “Lullaby” - Paris</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
-				<figcaption>Hotel First Arte - New Delhi</figcaption>
-			</figure>
-		</div>
-	</section>
-	<section id="contact">
-		<h2>Contact</h2>
-		<p>Vous avez un projet ? Discutons-en !</p>
-		<form action="#" method="post">
-			<label for="name">Nom</label>
-			<input type="text" name="name" id="name">
-			<label for="email">Email</label>
-			<input type="email" name="email" id="email">
-			<label for="message">Message</label>
-			<textarea name="message" id="message" cols="30" rows="10"></textarea>
-			<input type="submit" value="Envoyer">
-		</form>
-	</section>
-</main>
 
-<footer>
-	<nav>
-		<ul>
-			<li>Mentions Légales</li>
-		</ul>
-	</nav>
-</footer>
+<body>
+	<!-- MODAL 1 -->
+	<div class="modal-container modal-visibility-hidden" id="modal1">
+		<div class="overlay">
+			<div class="modal1">
+				<div class="form-btn">
+					<button class="close-modal" id="closeModal1">
+						<i class="fa-solid fa-xmark"></i>
+					</button>
+				</div>
+				<h1 class="modal-title">Galerie photo</h1>
+				<div class="thumbnails-modal"></div>
+				<div class="btn-container">
+					<button class="addWorksBtn activated">Ajouter une photo</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- MODAL 2 -->
+	<div class="modal-container modal-visibility-hidden" id="modal2">
+		<div class="overlay">
+			<div class="modal2">
+				<div class="btn-form">
+					<button class="backModalBtn">
+						<i class="fa-solid fa-arrow-left"></i>
+					</button>
+					<button class="close-modal" id="closeModal2">
+						<i class="fa-solid fa-xmark"></i>
+					</button>
+				</div>
+				<h1 class="modal-title">Ajout photo</h1>
+				<form id="form" class="form">
+					<div class="add-photo-container">
+						<div class="add-photo-block">
+							<i class="fa-regular fa-image"></i>
+							<div class="add-photo-btn">
+								<label class="add-photo-label" for="File">+ Ajouter photo</label>
+								<input class="input-hidden" type="file" name="File" id="File" accept=".jpg, .png">
+							</div>
+							<p>jpg, png : 4mo max</p>
+						</div>
+						<div class="add-photo-display hidden"></div>
+					</div>
+					<label class="title-label" for="title">Titre</label>
+					<input type="text" name="title" id="title">
+					<label class="categories-label" for="categories">Catégorie</label>
+					<select name="categories" id="categories"></select>
+					<p class="hidden error-message-category">Veuillez remplir tous les champs</p>
+					<div class="validation-btn">
+						<button type="submit" id="btnValider">Valider</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+	<!-- MODE EDITION -->
+	<aside class="hidden edit-bar-admin">
+		<i class="fa-regular fa-pen-to-square"></i>
+		<p>Mode édition</p>
+	</aside>
+
+	<header>
+		<h1>Sophie Bluel <span>ARCHITECTE D'INTERIEUR</span></h1>
+		<nav>
+			<ul>
+				<li><a>projets</a></li>
+				<li><a href="#contact">contact</a></li>
+				<li><a href="./login.html" class="login-btn">login</a></li>
+				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			</ul>
+		</nav>
+	</header>
+
+	<main>
+
+		<section id="introduction">
+			<figure>
+				<img src="./assets/images/sophie-bluel.png" alt="">
+			</figure>
+			<article>
+				<h2>Designer d'espace</h2>
+				<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison
+					finale du chantier.</p>
+				<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les
+					couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du
+					chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
+				<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG,
+					décorateur(trice)</p>
+			</article>
+		</section>
+
+		<section id="portfolio">
+			<div class="portfolio-logged">
+				<h2>Mes Projets</h2>
+				<button class="edit-btn hidden">
+					<i class="fa-regular fa-pen-to-square"></i>
+					<p>Modifier</p>
+				</button>
+			</div>
+			<div id="filters">
+				<!-- AJOUT DYNAMIQUE FILTRES TRAVAUX -->
+			</div>
+			<div class="gallery">
+				<!-- AJOUT DYNAMIQUE TRAVAUX -->
+			</div>
+		</section>
+
+		<section id="contact">
+			<h2>Contact</h2>
+			<p>Vous avez un projet ? Discutons-en !</p>
+			<form action="#" method="post">
+				<label for="name">Nom</label>
+				<input type="text" name="name" id="name">
+				<label for="email">Email</label>
+				<input type="email" name="email" id="email">
+				<label for="message">Message</label>
+				<textarea name="message" id="message" cols="30" rows="10"></textarea>
+				<input id="send-btn" type="submit" value="Envoyer">
+			</form>
+		</section>
+		
+	</main>
+
+	<footer>
+		<nav>
+			<ul>
+				<li>Mentions Légales</li>
+			</ul>
+		</nav>
+	</footer>
 </body>
+
 </html>
